--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,18 @@ before_install:
 
 install:
   - luarocks install busted
+  - luarocks install luacheck
   - luarocks install luacov
 
 script:
   - busted --verbose --coverage spec.lua
+  - luacheck .
 
 after_success:
   - luacov
   - bash <(curl -s https://codecov.io/bash)
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
